05.security/23.NetworkSegmentation/random-generator-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-generator
  template:
    metadata:
      labels:
        app: random-generator
        has-metrics: 'true'
    spec:
      containers:
        - name: random-generator
          image: k8spatterns/random-generator:1.0
          ports:
            - containerPort: 8080
