05.security/23.NetworkSegmentation/allow-access-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-to-random
spec:
  podSelector:
    # Policy applies to the random-generator app
    matchLabels:
      app: random-generator
  ingress:
    - from:
        - podSelector:
            # All Pods that carry "role: random-client" as label are allowed to access
            # our deployment
            matchLabels:
              role: random-client
      ports:
        - protocol: TCP
          port: 8080
