05.security/23.NetworkSegmentation/allow-internal-egress-only.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-internal-only
spec:
  policyTypes:
    # Type is needed here, otherwise it would also affect ingressesj
    - Egress
  podSelector: {}
  egress:
    # Only allow egress to all internal namespaces
    - to:
        - namespaceSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-chucknorris
spec:
  policyTypes:
    - Egress
  # This rule applies to all Pods
  podSelector: {}
  egress:
    - to:
        # Add here all IP adresses for api.chucknorris.io or any other service
        # that you want allow
        - ipBlock:
            cidr: 104.21.41.162/32
        - ipBlock:
            cidr: 172.67.148.58/32
