05.security/23.NetworkSegmentation/authorization-policy-allow-metrics.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-metrics
spec:
  # Match all pods that have a lbel "has-metrics
  selector:
    matchLabels:
      has-metrics: 'true'
  action: ALLOW
  rules:
    # Allow for all Pods that want to acess the "/actuator/health" endpoint
    - from:
        - source:
            namespaces: ['default']
      to:
        - operation:
            methods: ['GET']
            paths: ['/actuator/health']
